...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo_image"
     />

        <EditText
            android:id="@+id/project_code_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textSize="24sp"
            android:hint="@string/edit_text_hint"
            android:inputType="textPersonName"
            android:text="@={mainMenuViewModel.groupCode}"
            app:layout_constraintBottom_toTopOf="@+id/webshop_button"
            app:layout_constraintWidth_percent="0.4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/klimaatmobiel_image"
            app:layout_constraintVertical_bias="0.96" />

...
