...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:textColor="@color/colorBlack"
            android:textSize="22dp"

            app:layout_constraintEnd_toStartOf="@+id/cart_remove_order_item"
            app:layout_constraintStart_toEndOf="@+id/product_image"
            app:layout_constraintTop_toTopOf="parent"
            app:productNameBinding="@{orderItem.product.productName}"
            tools:text="Hout" />


...
            app:layout_constraintBottom_toBottomOf="@+id/product_image"
            app:layout_constraintStart_toEndOf="@+id/product_image"
            app:layout_constraintTop_toBottomOf="@+id/product_price"
            app:srcCompat="@drawable/icons8_minus_48" />

        <ImageButton
            android:id="@+id/btn_plus"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginLeft="4dp"
            app:layout_constraintBottom_toBottomOf="@+id/product_image"
            app:layout_constraintStart_toEndOf="@+id/order_item_amount"
...
