...
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginBottom="10dp"/>

            <ImageView
                android:id="@+id/add_to_cart_image"
                android:layout_width="99dp"
                android:layout_height="49dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:contentDescription="@string/add_to_cart_description"
                android:lineSpacingExtra="8dp"
...
